--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
   <body>
 
-    <script src="dist/decap-cms.js"></script>
+    <script src="https://unpkg.com/decap-cms-alter@^3.1.11/dist/decap-cms.js"></script>
     <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
     <script>
